--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-TITLE=maxvoltar.photo
-EMAIL=tim@maxvoltar.be
-AUTHOR_NAME=Tim Van Damme
-AUTHOR_EMAIL=tim@maxvoltar.be
-AUTHOR_WEBSITE=https://maxvoltar.com
-DESCRIPTION=@maxvoltar's minimalistic, self-hosted photo stream.
+TITLE=rohrbach.photos
+#EMAIL=tim@maxvoltar.be
+#AUTHOR_NAME=Zachary Rohrbach
+#AUTHOR_EMAIL=tim@maxvoltar.be
+AUTHOR_WEBSITE=https://rohrbach.tech
+DESCRIPTION=@rohrbach.photos's minimalistic, self-hosted photo stream.
 BASEURL=
 # URL must NOT end with / or links will be messed up
 URL=https://maxvoltar.photo
@@ -20,12 +20,12 @@ PHOTO_PATH=./photos
 # to 1 will reverse this sort order and show oldest images first.
 DEFAULT_REVERSE_SORT=0
 # leave the following blank to disable
-TWITTER_USERNAME=
-GITHUB_USERNAME=maxvoltar
-INSTAGRAM_USERNAME=maxvoltar
-CUSTOM_LINK_NAME=
-CUSTOM_LINK_URL=
-SYNCUSER=
-SYNCPASS=
-SYNCSERVER=
-SYNCFOLDER=
+#TWITTER_USERNAME=
+#GITHUB_USERNAME=maxvoltar
+INSTAGRAM_USERNAME=rohrbach.photos
+#CUSTOM_LINK_NAME=
+#CUSTOM_LINK_URL=
+#SYNCUSER=
+#SYNCPASS=
+#SYNCSERVER=
+#SYNCFOLDER=
