Fixed more links.

--- a/.env
+++ b/.env
@@ -2,18 +2,18 @@ TITLE=rohrbach.photos
 #EMAIL=tim@maxvoltar.be
 #AUTHOR_NAME=Zachary Rohrbach
 #AUTHOR_EMAIL=tim@maxvoltar.be
-AUTHOR_WEBSITE=https://rohrbach.tech
+#AUTHOR_WEBSITE=https://rohrbach.tech
 DESCRIPTION=@rohrbach.photos's minimalistic, self-hosted photo stream.
 BASEURL=
 # URL must NOT end with / or links will be messed up
 URL=https://maxvoltar.photo
-SHOW_RSS_FEED=1
-SHOW_OFFICIAL_GITHUB=1
+SHOW_RSS_FEED=0
+SHOW_OFFICIAL_GITHUB=0
 HEADER_ENABLED=0
 HEADER_BACKGROUND_COLOR="#161e2e"
 ALLOW_ORDER_SORT_CHANGE=1
 ALLOW_ORIGINAL_DOWNLOAD=0
-ALLOW_INDEXING=1
+ALLOW_INDEXING=0
 ALLOW_IMAGE_SHARING=1
 PHOTO_PATH=./photos
 # Default sort order is newest to oldest images. Setting the following
