More config changes.

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ TITLE=rohrbach.photos
 DESCRIPTION=@rohrbach.photos's minimalistic, self-hosted photo stream.
 BASEURL=
 # URL must NOT end with / or links will be messed up
-URL=https://maxvoltar.photo
+URL=https://rohrbach.photos
 SHOW_RSS_FEED=0
 SHOW_OFFICIAL_GITHUB=0
 HEADER_ENABLED=0
@@ -20,12 +20,12 @@ PHOTO_PATH=./photos
 # to 1 will reverse this sort order and show oldest images first.
 DEFAULT_REVERSE_SORT=0
 # leave the following blank to disable
-#TWITTER_USERNAME=
-#GITHUB_USERNAME=maxvoltar
+TWITTER_USERNAME=
+GITHUB_USERNAME=
 INSTAGRAM_USERNAME=rohrbach.photos
-#CUSTOM_LINK_NAME=
-#CUSTOM_LINK_URL=
-#SYNCUSER=
-#SYNCPASS=
-#SYNCSERVER=
-#SYNCFOLDER=
+CUSTOM_LINK_NAME=
+CUSTOM_LINK_URL=
+SYNCUSER=
+SYNCPASS=
+SYNCSERVER=
+SYNCFOLDER=
