--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ ALLOW_IMAGE_SHARING=1
 PHOTO_PATH=./photos
 # Default sort order is newest to oldest images. Setting the following
 # to 1 will reverse this sort order and show oldest images first.
-DEFAULT_REVERSE_SORT=0
+aDEFAULT_REVERSE_SORT=0
 # leave the following blank to disable
 TWITTER_USERNAME=
 GITHUB_USERNAME=
