--- a/.env
+++ b/.env
@@ -12,13 +12,13 @@ SHOW_OFFICIAL_GITHUB=0
 HEADER_ENABLED=0
 HEADER_BACKGROUND_COLOR="#161e2e"
 ALLOW_ORDER_SORT_CHANGE=1
-ALLOW_ORIGINAL_DOWNLOAD=0
+ALLOW_ORIGINAL_DOWNLOAD=1
 ALLOW_INDEXING=0
 ALLOW_IMAGE_SHARING=1
 PHOTO_PATH=./photos
 # Default sort order is newest to oldest images. Setting the following
 # to 1 will reverse this sort order and show oldest images first.
-aDEFAULT_REVERSE_SORT=0
+DEFAULT_REVERSE_SORT=0
 # leave the following blank to disable
 TWITTER_USERNAME=
 GITHUB_USERNAME=
